scss/widgets/post.scss
.dc-topic-avatar {
  text-align: center;
}

.dc-topic-body {
  position: relative;

  .read-state {
    top: -($grid-gutter-width / 4);
    right: -($grid-gutter-width / 4);
  }

  .post-infos {
    align-items: flex-start;
    flex-direction: column;
    position: absolute;
    right: 0;
    top: 0;
  }

  .regular.contents {
    width: 100%;

    .cooked {
      @include media-breakpoint-up(lg) {
        width: 90%;
      }
    }
  }

  .topic-map {
    margin-left: 0;
  }
}

// Make extra emphasis to overcome guest styles
.dc-topic-post.dc-topic-post {
  $padding-top: $spacer * 1.25;
  @include make-container;
  background-color: $beige;
  box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
  padding-top: $spacer * 1.25;

  // Allow to move above post components to the edge
  .above-post-correction,
  .post-notice {
    position: relative;
    top: -($spacer * 1.25);
  }

  .row {
    @include make-row;

    & > * {
      border: none;
    }
  }

  &.is-first-post {
    .topic-meta-data {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
    }
  }

  &:not(.is-first-post) {
    .dc-topic-avatar img {
      width: 2.8125rem;
      height: 2.8125rem;
    }
  }

  .topic-meta-data {
    margin-left: 0;
    margin-bottom: $spacer * 1.75;
  }

  // overcome discourse rule
  #topic-title {
    margin: 0;
    padding: 0;
  }

  .fancy-title {
    margin: 0 0 ($spacer * 0.5) 0;
    line-height: 1;
  }
}

.topic-post + .topic-post {
  margin-top: $spacer * 1.5;
}

.post-notice {
  width: 100%;
  max-width: none;
  margin-bottom: $spacer;
}

.post-menu-row {
  margin-top: $spacer * 3;
  border-top: 0.0625rem solid $gray-300;
}

.post-menu-area,
section.post-menu-area {
  padding: 0;
}

